# shiratama

./: .gitignore  README.md  docker-compose.yml
back/: Dockerfile  README.md  pyproject.toml
front/: Dockerfile  README.md  package-lock.json  package.json
front/src/app/: page.tsx
front/src/app/components/: Shiratama.tsx
